--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@ p {
   border: 3px solid black;
   background-color: grey;
   width: 90%;
-  height: 150px;
+  height: auto;
   margin-right: auto;
   margin-left: auto;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
+  text-align: left;
+  padding-left: 10px;
+  padding-bottom: 10px;
+
 }
 
 .title1{
@@ -118,9 +122,9 @@ p {
 <h1>Our Menu</h1>
 
 <div class="row">
-  <div class="col-lg-3 col-md-1"><p> <span class="title1">Chicken</span> </p></div>
-  <div class="col-lg-3 col-md-2"><p> <span class="title2">Beef</span> </p></div>
-  <div class="col-lg-3 col-md-3"><p> <span class="title3">Sushi</span></p></div>
+  <div class="col-lg-3 col-md-1"><p> <span class="title1">Chicken</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+  <div class="col-lg-3 col-md-2"><p> <span class="title2">Beef</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+  <div class="col-lg-3 col-md-3"><p> <span class="title3">Sushi</span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
  
 </div>
 
